--- a/source-code/app/src/main/res/values/colors.xml
+++ b/source-code/app/src/main/res/values/colors.xml
@@ -2,10 +2,14 @@
 <resources>
 	<color name="colorPrimary">#2C2E2E</color>
 	<color name="colorPrimaryDark">#2C2E2E</color>
-	<color name="colorPrimaryLight">#3F4042</color>
+	<color name="colorPrimaryLight">#3f4042</color>
 
-	<color name="colorTextPrimary">#FFFFFF</color>
+	<color name="colorTextPrimary">#ffffff</color>
 	<color name="colorTextPrimaryDark">#808080</color>
+
+	<!-- I was going to use this to show a background underneath, but it turns out that
+	transparency leaves ripple effects invisible :( -->
+	<color name="colorPrimaryDarkTransparent">#EE2C2E2E</color>
 
 	<color name="colorAccent">#247BF4</color>
 </resources>
