--- a/source-code/app/src/main/res/layout/main_fragment.xml
+++ b/source-code/app/src/main/res/layout/main_fragment.xml
@@ -7,13 +7,13 @@
 	tools:showIn="@layout/main_activity"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:background="@color/colorPrimaryDark"
 	>
 
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:orientation="vertical"
-		android:background="@color/colorPrimaryLight"
 		>
 
 		<!--Breadcrumb bar-->
@@ -76,7 +76,6 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:orientation="vertical"
-			android:background="@color/colorPrimary"
 			>
 
 			<!--Seek-->
